resolves mobile view text wrapping issue

--- a/app/webpacker/stylesheets/components/_flex.scss
+++ b/app/webpacker/stylesheets/components/_flex.scss
@@ -9,5 +9,5 @@
 
 .ncce-grid__no-space-between {
   display: grid;
-  grid-template-columns: 0.3fr 0.3fr;
+  grid-template-columns: 0.3fr 0.7fr;
 }
